[tool.poetry]
name = "objectdetector"
version = "3.0.0"
description = "Wraps a state-of-the-art detection model and communicates on its inputs and outputs following visionapi."
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.71"
pydantic = "^2.0.0"
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
setuptools = "^74.0.0"
opencv-python = "^4.10"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "2.0.0" }
visionlib = { git = "https://github.com/siri-rouser/vision-lib-YQ.git", subdirectory = "python"}
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
