[tool.poetry]
name = "objectdetector"
version = "3.0.0"
description = "Wraps a state-of-the-art detection model and communicates on its inputs and outputs following visionapi."
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.50"
pydantic = "^2.0.0"
visionapi_yq = {git = "https://github.com/siri-rouser/visionapi_YQ.git", rev= '5f8d7e21b88e42b55f44930f482a031fb4be9a3c', subdirectory="visionapi_YQ", tag = "0.0.1" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.9.0" }
torch = "^2.2.1"
torchvision = "^0.17.1"
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
setuptools = "^74.0.0"
tensorrt-cu12 = { version = "^10.7.0", source = "nvidia" }
tensorrt-cu12-libs = { version = "^10.7.0", source = "nvidia" }
tensorrt-cu12-bindings = { version = "^10.7.0", source = "nvidia" }


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
